# kafka-ml-pipeline

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/databases/cassandra/creditcard/customer-c605bcb01b5c11ee9c9ead8c8961b28a/: nb-1-big-CompressionInfo.db  nb-1-big-Data.db  nb-1-big-Digest.crc32  nb-1-big-Index.db
backend/databases/cassandra/creditcard/fraud_transaction-c5e58a801b5c11ee9c9ead8c8961b28a/: nb-1-big-Data.db  nb-1-big-Statistics.db
backend/databases/cassandra/creditcard/non_fraud_transaction-c5f1e6901b5c11ee9c9ead8c8961b28a/: nb-1-big-CompressionInfo.db  nb-1-big-Data.db  nb-1-big-Digest.crc32
backend/databases/cassandra/dummy/students-e689fb10fa3011eda919094312c98f07/: nb-1-big-Data.db  nb-1-big-Digest.crc32  nb-1-big-Statistics.db
backend/minio/.minio.sys/: format.json
notebooks/: import_to_cassandra.ipynb  kafka_consumer.ipynb  kafka_producer.ipynb  realtime_fraud_detection.ipynb  testing_services.ipynb
scripts/bash/: submit_jobs.sh
scripts/python/: stream_to_kafka.py
spark/cluster/: Dockerfile  spark-defaults.conf  start-spark.sh
spark/notebook/: Dockerfile
sql/: 01_create_model_registry.sql
src/: entrypoint.py  main.py
src/configs/: base_config.json
src/jobs/: base.py
src/jobs/fraud_detection_training/: entrypoint.py
src/jobs/import_to_cassandra/: entrypoint.py
src/jobs/realtime_inference/: entrypoint.py
src/schemas/: column_enums.py  structs.py
src/utils/: config.py  config_parser.py  ml.py  udfs.py
(+694 files in other folders)
