[project]
name = "realtime_ml"
version = "0.0.1"
description = "A realtime ML use-case with Kafka."
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
  {name = "ajkdrag", email = "altamashjahangirkhan123@gmail.com" }
]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
dependencies = [
	"scikit-learn>=0.23.2",
	"spacy==2.3.2",
	"dill==0.3.2",
	"pandas==1.1.1",
	"pyyaml==6.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
